k8s/mastodon/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-web
  namespace: mastodon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mastodon-web
  template:
    metadata:
      labels:
        app: mastodon-web
    spec:
      volumes:
        - name: mastodon
          persistentVolumeClaim:
            claimName: mastodon
      securityContext:
        fsGroup: 991
        fsGroupChangePolicy: "Always"
      containers:
        - name: mastodon
          args:
            - bundle
            - exec
            - puma
            - -C
            - config/puma.rb
          image: tootsuite/mastodon:v4.0.2
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /opt/mastodon/public/system
              name: mastodon
