k8s/mastodon/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mastodon-web
  namespace: mastodon
spec:
  selector:
    app: mastodon-web
  ports:
    - name: mastodon-web
      protocol: TCP
      port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mastodon-streaming
  namespace: mastodon
spec:
  selector:
    app: mastodon-streaming
  ports:
    - name: mastodon-streaming
      protocol: TCP
      port: 4000
